<resources>
    <string name="app_name">Namantaraday1</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="sign_in_to_your_account_to_continue">Sign in to your account to continue</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an Account?</string>
    <string name="signup">Sign Up</string>
    <string name="create_a_new_account_to_try_famous_recipes">Create a new account to try famous recipes</string>
    <string name="fullname">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="signin">Sign In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>